# BookMyBox

./: .gitignore  run.bat
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 869360ded0d6_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  (+9 more)
backend/app/core/: config.py  exceptions.py  logging.py  responses.py  security.py  websocket.py
backend/app/database/: base.py  redis.py  session.py
backend/app/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  audit_log.py  booking.py  ground.py  payment.py  promo_code.py  review.py  slot.py  user.py  wallet.py
backend/app/repositories/: base.py  booking.py  ground.py  payment.py  promo_code.py  review.py  slot.py  user.py  wallet.py
backend/app/schemas/: admin.py  auth.py  booking.py  common.py  ground.py  payment.py  review.py  slot.py  user.py  wallet.py
backend/app/services/: auth.py  booking.py  ground.py  notification.py  otp.py  payment.py  promo_code.py  review.py  slot.py  ticket.py  user.py  wallet.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/k8s/: backend-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  pvc.yaml  redis-deployment.yaml  secrets.yaml  worker-deployment.yaml
backend/nginx/: nginx.conf
backend/tests/: conftest.py
backend/tests/load/: locustfile.py
(+45 files in other folders)
